--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ venv
 .idea
 services/__pycache__/
 templates/index.html
+__pycache__/test.cpython-310-pytest-7.4.3.pyc
+__pycache__/app.cpython-310.pyc
